--- a/TravelFriend.Windows/Team/MemberCard.xaml
+++ b/TravelFriend.Windows/Team/MemberCard.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TravelFriend.Windows.Team"
+             xmlns:local="clr-namespace:TravelFriend.Windows.Team" xmlns:common="clr-namespace:TravelFriend.Windows.Common"
              mc:Ignorable="d" Height="110" Width="220">
     <Grid>
         <Border Background="White" CornerRadius="10" Margin="10">
@@ -26,11 +26,11 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Border Grid.RowSpan="2" Margin="20 0 0 0" VerticalAlignment="Center" BorderThickness="0" Width="50" Height="50" BorderBrush="{StaticResource MainGreen}">
-                    <Image Source="/Resources/DefaultBigAvatar.png" Width="50" Height="50" Stretch="UniformToFill">
+                    <common:UserAvatar x:Name="Avatar" UserName="{Binding UserName}" Source="/Resources/DefaultBigAvatar.png" Width="50" Height="50" Stretch="UniformToFill">
                         <Image.Clip>
                             <EllipseGeometry Center="25,25" RadiusX="25" RadiusY="25"/>
                         </Image.Clip>
-                    </Image>
+                    </common:UserAvatar>
                 </Border>
                 <TextBlock Grid.Column="2" Text="..." FontSize="14" Margin="0 0 10 0" VerticalAlignment="Top" Cursor="Hand"/>
                 <TextBlock Grid.Column="1" Text="{Binding Name}" FontSize="16" Margin="15 0 10 5" VerticalAlignment="Bottom"/>
