--- a/TravelFriend.Windows/Team/AlbumCard.xaml
+++ b/TravelFriend.Windows/Team/AlbumCard.xaml
@@ -33,7 +33,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <Image Source="/Resources/zhangzhier.png" Stretch="UniformToFill" Width="160" Height="160"/>
+            <Image x:Name="Cover" Source="/Resources/zhangzhier.png" Stretch="UniformToFill" Width="160" Height="160"/>
             <Border VerticalAlignment="Stretch">
                 <Border.Background>
                     <LinearGradientBrush StartPoint="0.5,1" EndPoint="0.5,0.5" Opacity="0.3">
