--- a/TravelFriend.Windows/Team/MemberCard.xaml
+++ b/TravelFriend.Windows/Team/MemberCard.xaml
@@ -3,8 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TravelFriend.Windows.Team" xmlns:common="clr-namespace:TravelFriend.Windows.Common"
+             xmlns:converter="clr-namespace:TravelFriend.Windows.Converter"
+             xmlns:local="clr-namespace:TravelFriend.Windows.Team" 
+             xmlns:common="clr-namespace:TravelFriend.Windows.Common"
              mc:Ignorable="d" Height="110" Width="220">
+    <UserControl.Resources>
+        <converter:BoolenToStringConverter x:Key="BoolenToString"/>
+    </UserControl.Resources>
     <Grid>
         <Border Background="White" CornerRadius="10" Margin="10">
             <Border.Effect>
@@ -33,8 +38,8 @@
                     </common:UserAvatar>
                 </Border>
                 <TextBlock Grid.Column="2" Text="..." FontSize="14" Margin="0 0 10 0" VerticalAlignment="Top" Cursor="Hand"/>
-                <TextBlock Grid.Column="1" Text="{Binding Name}" FontSize="16" Margin="15 0 10 5" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="队员" Foreground="{StaticResource Gray}" FontSize="12" Margin="15 5 10 0" VerticalAlignment="Top"/>
+                <TextBlock Grid.Column="1" Text="{Binding NickName}" FontSize="16" Margin="15 0 10 5" VerticalAlignment="Bottom"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding IsLeader,Converter={StaticResource BoolenToString}}" Foreground="{StaticResource Gray}" FontSize="12" Margin="15 5 10 0" VerticalAlignment="Top"/>
             </Grid>
         </Border>
     </Grid>
