--- a/TravelFriend.Windows/Chat/ChatPopup.xaml
+++ b/TravelFriend.Windows/Chat/ChatPopup.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TravelFriend.Windows.Chat.ChatPopup"
+﻿<Popup x:Class="TravelFriend.Windows.Chat.ChatPopup"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,8 +6,9 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:TravelFriend.Windows.Chat" 
              xmlns:common="clr-namespace:TravelFriend.Windows.Common"
+             AllowsTransparency="True" StaysOpen="False"
              Width="470" Height="470">
-    <UserControl.Resources>
+    <Popup.Resources>
         <DataTemplate x:Key="Tip">
             <Grid Margin="0 5 0 0" Width="430">
                 <Border CornerRadius="10" Background="{StaticResource LightGray}" MaxWidth="300" VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -62,7 +63,7 @@
                 </common:UserAvatar>
             </Grid>
         </DataTemplate>
-    </UserControl.Resources>
+    </Popup.Resources>
     <Grid Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -125,4 +126,4 @@
         </Border>
         <Border Grid.Row="1" Margin="10 -10 10 51" Background="White" HorizontalAlignment="Left" Width="50"/>
     </Grid>
-</UserControl>
+</Popup>
