--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -287,7 +287,7 @@
                 <UserControl x:Name="PageContainer" Margin="30"/>
             </Border>
             <main:PersonalDataPopup x:Name="PersonalDataPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=PersonalData}" VerticalOffset="5" StaysOpen="False"/>
-            <chat:ChatPopup x:Name="ChatPopup" Visibility="Collapsed" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
+            <chat:ChatPopup x:Name="ChatPopup" Grid.ColumnSpan="2" Grid.RowSpan="2" StaysOpen="False"/>
             <main:SettingPopup x:Name="SettingPopup" Placement="Bottom" PlacementTarget="{Binding ElementName=Setting}" VerticalOffset="5" HorizontalOffset="-10" StaysOpen="False"/>
             <main:UpdatePersonalData x:Name="UpdatePersonalData" Grid.ColumnSpan="2" Grid.RowSpan="2" Visibility="Collapsed"/>
             <common:Toast x:Name="Toast" Grid.ColumnSpan="2" Grid.RowSpan="2"/>
