--- a/TravelFriend.Windows/Team/TeamPage.xaml
+++ b/TravelFriend.Windows/Team/TeamPage.xaml
@@ -31,7 +31,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <Button Content="{DynamicResource CreateTeam}" Margin="0 5 5 0" FontSize="12" Width="80" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Background="{StaticResource MainGreen}" BorderThickness="0"/>
+        <Button x:Name="CreateTeam" Click="CreateTeam_Click" Content="{DynamicResource CreateTeam}" Margin="0 5 5 0" FontSize="12" Width="80" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Background="{StaticResource MainGreen}" BorderThickness="0"/>
         <UserControl x:Name="DetailContainer" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
     </Grid>
 </UserControl>
