--- a/TravelFriend.Windows/Chat/ChatPopup.xaml
+++ b/TravelFriend.Windows/Chat/ChatPopup.xaml
@@ -112,10 +112,10 @@
                             <Style TargetType="Image">
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="False">
-                                        <Setter Property="Source" Value="/Resources/Gray/Send.png"/>
+                                        <!--<Setter Property="Source" Value="/Resources/Gray/Send.png"/>-->
                                     </Trigger>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Source" Value="/Resources/Green/Send.png"/>
+                                        <!--<Setter Property="Source" Value="/Resources/Green/Send.png"/>-->
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
