--- a/TravelFriend.Windows/Transport/UploadBlock.xaml
+++ b/TravelFriend.Windows/Transport/UploadBlock.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:TravelFriend.Windows.Transport"
              mc:Ignorable="d" HorizontalAlignment="Stretch">
     <Border BorderThickness="0 0 0 1" BorderBrush="{StaticResource LightGray}" Background="White" Height="40" HorizontalAlignment="Stretch">
@@ -25,10 +24,10 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Image Grid.Column="0" Grid.RowSpan="2" Source="/Resources/Video.png" VerticalAlignment="Center" Width="30"/>
-                <TextBlock Grid.Column="1" Margin="10 0 0 0" Text="张之二.jpg" FontSize="12" VerticalAlignment="Bottom"/>
-                <TextBlock Grid.Column="1" Grid.Row="1" Margin="10 0 0 0" Text="30KB" FontSize="10" Foreground="{StaticResource DarkGray}" VerticalAlignment="Top"/>
+                <TextBlock Grid.Column="1" Margin="10 0 0 0" Text="{Binding FileName}" FontSize="12" VerticalAlignment="Bottom"/>
+                <TextBlock Grid.Column="1" Grid.Row="1" Margin="10 0 0 0" Text="{Binding FileSize}" FontSize="10" Foreground="{StaticResource DarkGray}" VerticalAlignment="Top"/>
             </Grid>
-            <TextBlock Grid.Column="2" Grid.RowSpan="2" Text="xiaoyi/同学" VerticalAlignment="Center" FontSize="14" Margin="10 0 0 0"/>
+            <TextBlock Grid.Column="2" Grid.RowSpan="2" Text="{Binding Target}" VerticalAlignment="Center" FontSize="14" Margin="10 0 0 0"/>
             <Grid Grid.Column="3" Margin="10 0 0 0">
                 <Grid.RowDefinitions>
                     <RowDefinition />
@@ -40,9 +39,9 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="Timestamp" Grid.Row="1" Text="00:06:05" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="{StaticResource DarkGray}"/>
-                <TextBlock x:Name="Speed" Grid.Row="1" Grid.Column="1" Text="1.3m/s" VerticalAlignment="Top" HorizontalAlignment="Right" Foreground="{StaticResource DarkGray}"/>
-                <ProgressBar Height="8" Grid.ColumnSpan="2" VerticalAlignment="Center" Background="{StaticResource Gray}" Foreground="{StaticResource MainGreen}" Value="40" BorderThickness="0"/>
+                <TextBlock x:Name="Timestamp" Grid.Row="1" Text="{Binding Timestamp}" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="{StaticResource DarkGray}"/>
+                <TextBlock x:Name="Speed" Grid.Row="1" Grid.Column="1" Text="{Binding Speed}" VerticalAlignment="Top" HorizontalAlignment="Right" Foreground="{StaticResource DarkGray}"/>
+                <ProgressBar Height="10" Grid.ColumnSpan="2" Style="{StaticResource MyProgressBar}" VerticalAlignment="Center" Value="{Binding Progress}" BorderThickness="0"/>
                 <Image Grid.Column="2" Grid.RowSpan="2" Margin="10 0 0 0" Source="/Resources/Gray/Pause.png" Width="12" VerticalAlignment="Center"/>
                 <Image Grid.Column="3" Grid.RowSpan="2" Margin="10 0" Source="/Resources/Gray/Close.png" Width="12" VerticalAlignment="Center"/>
             </Grid>
