[ADD]相册接口修改

--- a/TravelFriend.Windows/MainWindow.xaml
+++ b/TravelFriend.Windows/MainWindow.xaml
@@ -216,7 +216,7 @@
                                 </Style>
                             </RadioButton.Style>
                         </RadioButton>
-                        <RadioButton Name="Transport" Cursor="Hand" Checked="Transport_Checked">
+                        <RadioButton Name="Transport" Cursor="Hand" Checked="Transport_Checked" Visibility="Collapsed">
                             <RadioButton.Style>
                                 <Style TargetType="RadioButton">
                                     <Setter Property="Template">
