--- a/TravelFriend.Windows/Album/AlbumPage.xaml
+++ b/TravelFriend.Windows/Album/AlbumPage.xaml
@@ -18,9 +18,9 @@
             <Image x:Name="Return" MouseLeftButtonUp="Return_MouseLeftButtonUp" Cursor="Hand" Source="/Resources/Green/Return.png" Width="24" Height="24" HorizontalAlignment="Left" SnapsToDevicePixels="True"/>
             <TextBlock Grid.Column="1" Text="{DynamicResource Return}" Cursor="Hand" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="18" Foreground="{StaticResource MainGreen}" Margin="5 0 0 0" FontWeight="Bold" MouseLeftButtonUp="Return_MouseLeftButtonUp"/>
         </Grid>
-        <StackPanel Orientation="Vertical" Grid.Row="1">
-            <ProgressBar x:Name="Progress" Margin="0 20" Height="20" Foreground="{StaticResource DarkGreen}" Background="{StaticResource LightGreen}" BorderThickness="0"/>
-            <Button Width="200" Height="30" Content="上传" Background="{StaticResource MainGreen}" Click="Button_Click" BorderThickness="0"/>
-        </StackPanel>
+        <Button Width="80" Height="30" Content="上传" Background="{StaticResource MainGreen}" Click="Button_Click" BorderThickness="0" HorizontalAlignment="Right"/>
+        <ScrollViewer Grid.Row="1" Margin="0,10,0,0">
+            <WrapPanel x:Name="AlbumDetail"/>
+        </ScrollViewer>
     </Grid>
 </UserControl>
