--- a/TravelFriend.Windows/Album/Thumbnail.xaml
+++ b/TravelFriend.Windows/Album/Thumbnail.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TravelFriend.Windows.Album"
-             mc:Ignorable="d" Width="200" Height="280">
+             mc:Ignorable="d" Width="270">
     <UserControl.Resources>
         <Storyboard x:Key="LoadingStoryboard">
             <DoubleAnimation To="360" RepeatBehavior="Forever" Duration="0:0:2"
