--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -72,4 +72,5 @@
     <sys:String x:Key="Determine">确定</sys:String>
     <sys:String x:Key="Transport">传输</sys:String>
     <sys:String x:Key="NoThumbnail">暂无缩略图</sys:String>
+    <sys:String x:Key="Upload">上传</sys:String>
 </ResourceDictionary>
