--- a/TravelFriend.Windows/Styles/Language_CN.xaml
+++ b/TravelFriend.Windows/Styles/Language_CN.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                    xmlns:sys="clr-namespace:System;assembly=System.Runtime">
     <sys:String x:Key="AppName">旅朋友</sys:String>
     <sys:String x:Key="Login">登录</sys:String>
     <sys:String x:Key="ClickEdit">点击编辑详情</sys:String>
@@ -73,4 +73,8 @@
     <sys:String x:Key="Transport">传输</sys:String>
     <sys:String x:Key="NoThumbnail">暂无缩略图</sys:String>
     <sys:String x:Key="Upload">上传</sys:String>
+    <sys:String x:Key="Progress">进度</sys:String>
+    <sys:String x:Key="TransportName">名称</sys:String>
+    <sys:String x:Key="UploadTo">上传到（目标/相册）</sys:String>
+    <sys:String x:Key="NoUploadData">暂无上传内容</sys:String>
 </ResourceDictionary>
